# verbatim

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  deny.toml
.cargo/: config.toml
.claude/memory/: MEMORY.md  README.md  verbatim-gui-tao-panic-fix.md  verbatim-hyprland-target.md  verbatim-wayland-overlay-focus-steal.md
.github/workflows/: channels.yml  ci.yml  docs.yml  release.yml
assets/prompts/: default@1.txt
benches/baselines/: macos-latest.json  windows-latest.json
benches/fixtures/: README.md
crates/verbatim-app/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
crates/verbatim-app/capabilities/: default.json
crates/verbatim-app/icons/: icon.icns
crates/verbatim-app/src/: bridge.rs  client.rs  config.rs  daemon.rs  error_catalog.rs  gui.rs  history.rs  ipc.rs  lib.rs  main.rs  models.rs  onboarding.rs  overlay.rs  selftest.rs  settings.rs  stats.rs  transport.rs  tray.rs
crates/verbatim-app/tests/: error_catalog_reachability.rs  hotkey_wiring.rs  onboarding_window.rs  overlay_window.rs  walking_skeleton.rs
crates/verbatim-core/: Cargo.toml
crates/verbatim-core/src/: dictionary.rs  error.rs  event.rs  hotkey.rs  level.rs  lib.rs  polish_guard.rs  runner.rs  session.rs
crates/verbatim-engines/: Cargo.toml
crates/verbatim-engines/benches/: latency.rs  polish_quality.rs
crates/verbatim-engines/src/: calibration.rs  fake.rs  lib.rs  llama.rs  model.rs  polish.rs  prompts.rs  registry.rs  sherpa.rs  transcribe.rs  types.rs  whisper.rs
crates/verbatim-model-downloader/: Cargo.toml
crates/verbatim-model-downloader/src/: lib.rs
crates/verbatim-platform/: Cargo.toml  build.rs
crates/verbatim-platform/src/: audio.rs  errors.rs  fake.rs  hotkey.rs  lib.rs  macos.rs  modifier_tap.rs  traits.rs  tray.rs  types.rs  windows.rs
crates/verbatim-platform/src/linux/: announce.rs  clipboard.rs  focus.rs  hotkey.rs  inject.rs  mod.rs  permission.rs  portal.rs  uinput.rs
crates/verbatim-platform/src/macos/: announce.rs  clipboard.rs  ffi.rs  focus.rs  inject.rs  mod.rs  permission.rs
crates/verbatim-platform/src/windows/: announce.rs  clipboard.rs  focus.rs  hotkey.rs  inject.rs  mod.rs  permission.rs
crates/verbatim-platform/tests/: audio_level.rs  linux_seams.rs  macos_seams.rs  windows_seams.rs
docs/: ARCHITECTURE.md  DOGFOOD_REPORT_TEMPLATE.md  ENGINEERING.md  M1_INJECTION_VERIFICATION.md  PRD.md  ROADMAP.md  THREAT_MODEL.md  UX.md
docs/site/: README.md  astro.config.mjs  package.json  pnpm-lock.yaml
docs/site/src/content/docs/: index.md  install.md  permissions.md  troubleshooting.md  using.md
packaging/: README.md
packaging/flatpak/: app.verbatim.dictation.desktop  app.verbatim.dictation.metainfo.xml  app.verbatim.dictation.yml
packaging/homebrew/: verbatim.rb
packaging/linux/: 60-verbatim-uinput.rules  install-udev-rule.sh
packaging/winget/: Underthinker.Verbatim.installer.yaml  Underthinker.Verbatim.locale.en-US.yaml  Underthinker.Verbatim.yaml
plans/: m1-completion.md  m2-ux-shell.md  m3-polish.md  m4-packaging-hardening.md
scripts/: README.md  verify-injection.ps1  verify-injection.sh  verify-latency.ps1  verify-latency.sh  verify-overlay.sh
spikes/: 01-wayland-injection-hotkeys.md  02-macos-injection-tcc.md  03-latency-budget.md  04-local-llm-polish.md  05-sherpa-parakeet.md
ui/: eslint.config.js  index.html  onboarding.html  overlay.html  package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: App.tsx  events.ts  main.tsx
ui/src/onboarding/: Onboarding.tsx  commands.ts  main.tsx  onboarding.css
ui/src/overlay/: Overlay.tsx  events.ts  main.tsx  overlay.css
ui/src/settings/: HistoryList.tsx  ModelsTab.tsx  Settings.tsx  commands.ts  settings.css
