[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"

[workspace.dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
# macos-private-api: transparent overlay webview background (no-op elsewhere).
tauri = { version = "2", default-features = true, features = ["macos-private-api"] }
tauri-build = { version = "2", default-features = true }
tokio = { version = "1", default-features = false, features = ["sync"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

verbatim-core = { path = "crates/verbatim-core" }
verbatim-platform = { path = "crates/verbatim-platform" }
verbatim-engines = { path = "crates/verbatim-engines" }

[workspace.lints.clippy]
# ENGINEERING.md section 3: no unwrap/expect outside tests and startup.
unwrap_used = "deny"
expect_used = "deny"
