[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"

[workspace.dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
# macos-private-api: transparent overlay webview background (no-op elsewhere).
# tray-icon: the cross-platform menu-bar/system tray the M2 shell owns (E-4).
tauri = { version = "2", default-features = true, features = ["macos-private-api", "tray-icon"] }
tauri-build = { version = "2", default-features = true }
# System clipboard writes for the tray's "recent dictations -> copy" action.
tauri-plugin-clipboard-manager = "2"
# Hands a URL to the OS default browser (About -> documentation). Used from Rust
# only, so the webview never names the URL and no plugin ACL grant is needed.
tauri-plugin-opener = "2"
tokio = { version = "1", default-features = false, features = ["sync", "time"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

verbatim-core = { path = "crates/verbatim-core" }
verbatim-platform = { path = "crates/verbatim-platform" }
verbatim-engines = { path = "crates/verbatim-engines" }

[workspace.lints.clippy]
# ENGINEERING.md section 3: no unwrap/expect outside tests and startup.
unwrap_used = "deny"
expect_used = "deny"
