[package]
name = "verbatim-app"
description = "Application shell: CLI entry now, Tauri shell during M1 wire-up"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "verbatim"
path = "src/main.rs"

[dependencies]
clap.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util", "time", "signal"] }
tracing.workspace = true
tracing-subscriber.workspace = true
verbatim-core.workspace = true
verbatim-engines.workspace = true
verbatim-platform.workspace = true

[features]
# Boot the daemon on the real cpal microphone instead of the fake fixture.
# Transcription/injection stay fake until their phases land, so this only
# swaps the capture seam. Tests always run on fakes.
real-audio = ["verbatim-platform/cpal-audio"]
# Boot the daemon on real whisper.cpp transcription (model path from
# VERBATIM_WHISPER_MODEL). Injection stays fake until its phase.
real-transcription = ["verbatim-engines/whisper-cpp"]

[lints]
workspace = true
