[package]
name = "verbatim-app"
description = "Application shell: CLI entry now, Tauri shell during M1 wire-up"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "verbatim"
path = "src/main.rs"

[dependencies]
clap.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util", "time", "signal"] }
tracing.workspace = true
tracing-subscriber.workspace = true
verbatim-core.workspace = true
verbatim-engines.workspace = true
verbatim-platform.workspace = true

[features]
# Boot the daemon on the real cpal microphone instead of the fake fixture.
# Transcription/injection stay fake until their phases land, so this only
# swaps the capture seam. Tests always run on fakes.
real-audio = ["verbatim-platform/cpal-audio"]
# Boot the daemon on real whisper.cpp transcription (model path from
# VERBATIM_WHISPER_MODEL). Injection stays fake until its phase.
real-transcription = ["verbatim-engines/whisper-cpp"]
# Boot the daemon on the real injection + focus seams for the build's target
# OS instead of the fakes. Clipboard/permission probes ship in the same crate
# for the shell to call. Tests always run on fakes.
real-injection = [
    "verbatim-platform/mac-inject",
    "verbatim-platform/linux-inject",
    "verbatim-platform/win-inject",
]

# Drive the daemon from a real global hotkey instead of CLI triggers only.
# Hold/toggle semantics live in core; this only registers the OS chord.
global-hotkey = ["verbatim-platform/global-hotkey"]

[lints]
workspace = true
