[package]
name = "verbatim-app"
description = "Application shell: CLI entry now, Tauri shell during M1 wire-up"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "verbatim"
path = "src/main.rs"

# Needs the process main thread for the webview event loop; self-gates behind
# VERBATIM_GUI_E2E=1 (see tests/overlay_window.rs).
[[test]]
name = "overlay_window"
harness = false

[[test]]
name = "onboarding_window"
harness = false

[build-dependencies]
tauri-build.workspace = true

[dependencies]
clap.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tauri.workspace = true
tauri-plugin-clipboard-manager.workspace = true
tauri-plugin-opener.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util", "time", "signal"] }
tracing.workspace = true
tracing-subscriber.workspace = true
verbatim-core.workspace = true
verbatim-engines.workspace = true
verbatim-model-downloader.workspace = true
verbatim-platform.workspace = true

# The overlay is a wlroots/GNOME layer-shell surface on Linux so the compositor
# never gives it keyboard focus (focusable(false) is an X11-only no-op on
# Wayland). gtk-layer-shell wraps the same GtkWindow Tauri already builds.
[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
gtk-layer-shell = { version = "0.8", features = ["v0_6"] }

[dev-dependencies]
# `test-util` gives paused-time control so the IPC read-timeout test resolves
# instantly instead of waiting out the real deadline.
tokio = { workspace = true, features = ["test-util"] }

[features]
# Serve the webview from the embedded `ui/dist` assets instead of the Vite dev
# server. The Tauri CLI enables this automatically on `tauri build`; a plain
# debug `cargo run -- gui` loads the dev server URL (tauri.conf.json devUrl).
custom-protocol = ["tauri/custom-protocol"]
# Boot the daemon on the real cpal microphone instead of the fake fixture.
# Transcription/injection stay fake until their phases land, so this only
# swaps the capture seam. Tests always run on fakes.
real-audio = ["verbatim-platform/cpal-audio"]
# Boot the daemon on real whisper.cpp transcription. The model file resolves
# from the configured `transcription_model` id (VERBATIM_WHISPER_MODEL
# overrides); absent/unloadable degrades to the fake with a warning.
real-transcription = ["verbatim-engines/whisper-cpp"]
# Boot the daemon on real llama.cpp polish. The model file resolves from the
# configured `polish_model` id (VERBATIM_POLISH_MODEL overrides); absent or
# unloadable degrades to the fake echo polish, which injects the raw
# transcript.
real-polish = ["verbatim-engines/llama-cpp"]
# Boot the daemon on the real injection + focus seams for the build's target
# OS instead of the fakes. Clipboard/permission probes ship in the same crate
# for the shell to call. Tests always run on fakes.
real-injection = [
    "verbatim-platform/mac-inject",
    "verbatim-platform/linux-inject",
    "verbatim-platform/win-inject",
]

# Drive the daemon from a real global hotkey instead of CLI triggers only.
# Hold/toggle semantics live in core; this only registers the OS chord.
global-hotkey = ["verbatim-platform/global-hotkey"]

[lints]
workspace = true
