[package]
name = "verbatim-engines"
description = "Engine layer: transcription and polish engine traits, registry, and fakes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true

# Incremental UTF-8 decoding for llama token pieces (multi-byte chars can span
# token boundaries). Only pulled with the polish engine; already in the tree via
# llama-cpp-2.
encoding_rs = { version = "0.8", optional = true }

# Real whisper.cpp transcription (ENGINEERING.md 2). Metal is compiled in on
# macOS for the M1 slice; other targets fall back to the CPU build. Optional so
# fake-only builds and CI without a C toolchain need none of it.
[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.16", optional = true, default-features = false, features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
whisper-rs = { version = "0.16", optional = true, default-features = false }

# Real llama.cpp text polish (ENGINEERING.md 2, ARCHITECTURE.md 4.3). Metal on
# macOS mirrors the whisper split; other targets are CPU unless the Vulkan
# feature is enabled. Optional so fake-only/CI builds pull none of it.
[target.'cfg(target_os = "macos")'.dependencies.llama-cpp-2]
version = "0.1"
optional = true
default-features = false
features = ["metal"]

[target.'cfg(not(target_os = "macos"))'.dependencies.llama-cpp-2]
version = "0.1"
optional = true
default-features = false

[dev-dependencies]
# WAV decoding for the latency bench fixture only; never a pipeline dep.
hound = "3.5"

[[bench]]
name = "latency"
harness = false
required-features = ["whisper-cpp"]

[[bench]]
name = "polish_quality"
harness = false
required-features = ["llama-cpp"]

[features]
# Real engine implementations land during M1 wire-up (ARCHITECTURE.md 4.2/4.3).
whisper-cpp = ["dep:whisper-rs"]
# Vulkan GPU backend for non-macOS targets (macOS uses Metal, compiled in above).
# Vendor-neutral GPU acceleration for the Windows/Linux reference-hardware
# latency criterion; requires the Vulkan SDK (VULKAN_SDK env var) at build time.
# GPU is tried first with CPU fallback (see WhisperCppEngine::load).
whisper-vulkan = ["whisper-cpp", "whisper-rs/vulkan"]
sherpa-onnx = []
# Real llama.cpp polish engine (ARCHITECTURE.md 4.3). Metal is compiled in on
# macOS above; CPU elsewhere unless `llama-vulkan` adds the GPU backend.
llama-cpp = ["dep:llama-cpp-2", "dep:encoding_rs"]
# Vulkan GPU backend for the polish engine on non-macOS targets; requires the
# Vulkan SDK at build time. GPU is tried first with CPU fallback (see load).
llama-vulkan = ["llama-cpp", "llama-cpp-2/vulkan"]

[lints]
workspace = true
