[package]
name = "verbatim-model-downloader"
description = "The sole network-capable component: resumable, hash-verified model downloads"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
sha2 = "0.10"
verbatim-engines.workspace = true

[lints]
workspace = true
