[package]
name = "verbatim-platform"
description = "Platform layer: OS-facing trait definitions, per-OS implementations, and fakes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
verbatim-engines.workspace = true

# Real microphone capture (ENGINEERING.md 2: cpal behind the AudioCapture
# trait). Gated so fake-only builds and headless CI need no audio stack.
cpal = { version = "0.15", optional = true }
ringbuf = { version = "0.4", optional = true }
rubato = { version = "0.15", optional = true }

# Real global-hotkey registration behind the HotkeyManager trait (Tao/Tauri
# authors' crate; aligns with the eventual Tauri shell). Gated so fake-only
# builds and headless CI need no windowing/event-loop stack.
global-hotkey = { version = "0.6", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
# macOS hotkey delivery runs on the main thread's CFRunLoop; the real backend
# pumps one there. The right-Option push-to-talk trigger is a CGEventTap on
# flagsChanged (bare modifiers cannot be RegisterEventHotKey chords), added to
# that same run loop.
core-foundation = { version = "0.10", optional = true }
# Shared by the hotkey CGEventTap (phase 5) and the text-injection stack
# (phase 4, ARCHITECTURE.md 4.4).
core-graphics = { version = "0.25", optional = true }

# Menu-bar tray presence with a Quit item (ROADMAP M1). Shares the main-thread
# run loop the hotkey pumps; menu clicks arrive on muda's global channel. From
# the Tao/Tauri authors, so it aligns with the eventual Tauri shell.
tray-icon = { version = "0.19", optional = true }

# Real macOS text injection stack (ARCHITECTURE.md 4.4, spikes 1-2) plus the
# accessory-app promotion the tray needs. Only ever compiled on macOS under the
# real features; fake-only and non-macOS builds pull none of it.
objc2 = { version = "0.6", optional = true }
objc2-foundation = { version = "0.3", optional = true, default-features = false, features = [
    "std",
    "NSString",
    "NSData",
    "NSDate",
    "NSRunLoop",
] }
objc2-app-kit = { version = "0.3", optional = true, default-features = false, features = [
    "std",
    "NSApplication",
    "NSEvent",
    "NSResponder",
    "NSRunningApplication",
    "NSPasteboard",
    "NSWorkspace",
] }

# Real Linux injection/hotkey stack (spike 1): RemoteDesktop portal + libei
# for consent-ful injection on GNOME/KDE, /dev/uinput as the direct fallback,
# wl-clipboard for the clipboard discipline, GlobalShortcuts portal for
# hotkeys. Gated behind `linux-inject`; fake-only builds pull none of it.
[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.13", default-features = false, features = [
    "tokio",
    "remote_desktop",
    "screencast",
    "global_shortcuts",
], optional = true }
evdev = { version = "0.13", optional = true }
wl-clipboard-rs = { version = "0.9", optional = true }
futures-util = { version = "0.3", default-features = false, optional = true }
# The portal/libei stack is async (zbus); the sync platform traits drive it
# through a small owned current-thread runtime.
tokio = { version = "1", default-features = false, features = [
    "rt",
    "time",
    "sync",
    "macros",
], optional = true }

# Real Windows injection/clipboard/focus/hotkey stack (windows.rs doc stub):
# SendInput KEYEVENTF_UNICODE typing -> clipboard + Ctrl-V paste ->
# clipboard-only, RegisterHotKey chords plus a low-level keyboard hook for
# bare-modifier hold. Official Microsoft bindings; never the abandoned winapi.
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", optional = true, features = [
    "Win32_Foundation",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[features]
# Compile the real cpal-backed AudioCapture. Off by default: tests and the
# default daemon run on the deterministic fakes (ENGINEERING.md 4).
cpal-audio = ["dep:cpal", "dep:ringbuf", "dep:rubato"]
# Compile the real macOS injection/focus/clipboard/permission seams. Off by
# default so headless CI and the fake pipeline never touch AppKit/CoreGraphics.
mac-inject = ["dep:objc2", "dep:objc2-foundation", "dep:objc2-app-kit", "dep:core-graphics"]

# Compile the real global-hotkey-backed HotkeyManager. Off by default for the
# same reason: fakes drive tests and headless CI.
global-hotkey = [
    "dep:global-hotkey",
    "dep:core-foundation",
    "dep:core-graphics",
    "dep:tray-icon",
    "dep:objc2",
    "dep:objc2-foundation",
    "dep:objc2-app-kit",
]
# Compile the real Linux injection/clipboard/hotkey seams. Off by default so
# headless CI and the fake pipeline never touch the portal/uinput stack.
linux-inject = [
    "dep:ashpd",
    "dep:evdev",
    "dep:wl-clipboard-rs",
    "dep:tokio",
    "dep:futures-util",
]
# Compile the real Windows injection/clipboard/focus/hotkey seams. Off by
# default so headless CI and the fake pipeline never touch Win32.
win-inject = ["dep:windows"]

[lints]
workspace = true
